# ChatExportPDF

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
Examples/: README.md  run_examples.ipynb
Examples/ThreemaSynthetic/: README.txt  ThreemaData.sqlite
Examples/WhatsAppSynthetic/: README.txt
packaging/windows/: ChatExportPDF.spec  build_gui.ps1
src/chat_export/: __init__.py  __main__.py  cli.py  config.py  config_factory.py  constants.py  export_summary.py  gui.py  gui_main.py  orchestrator.py
src/chat_export/common/: __init__.py  logging_setup.py  textutil.py  timeutil.py  util.py
src/chat_export/importers/: __init__.py  base.py
src/chat_export/normalized/: __init__.py  models.py
src/chat_export/render/: __init__.py  excel_builder.py  pdf_builder.py  pdf_styles.py
src/chat_export/threema/: __init__.py  external_index.py  importer.py  models.py  normalize.py  tech_pdf.py
src/chat_export/threema/db/: __init__.py  connect.py  queries.py  schema.py
src/chat_export/threema/media/: __init__.py  export.py  magic.py
src/chat_export/whatsapp/: __init__.py  importer.py  normalize.py  zip_reader.py
src/threema_export/: cli.py  config.py  logging_setup.py  models.py  orchestrator.py  pipeline.py  textutil.py  timeutil.py  util.py
src/threema_export/common/: __init__.py  logging_setup.py  timeutil.py
src/threema_export/db/: connect.py  queries.py  schema.py
src/threema_export/importers/: __init__.py  base.py
src/threema_export/media/: export.py  magic.py
src/threema_export/normalized/: __init__.py  models.py
src/threema_export/pdf/: builder.py  styles.py
src/threema_export/render/: __init__.py  pdf_builder.py
src/threema_export/threema/: __init__.py  external_index.py  importer.py  models.py  normalize.py  tech_pdf.py
src/threema_export/threema/db/: __init__.py  queries.py  schema.py
src/threema_export/threema/media/: __init__.py  export.py  magic.py
src/threema_export/whatsapp/: __init__.py  importer.py  normalize.py
