[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chat-export-pdf"
version = "0.5.0"
description = "Export chat conversations from multiple sources to PDFs with optional media extraction"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Proprietary"}
authors = [{name = "Jerome Maag" }]
dependencies = [
  "Pillow>=10.0.0",
  "reportlab>=4.0.0",
  "emoji>=2.0.0",
  "tzdata>=2023.3; platform_system=='Windows'",
]


[project.scripts]
chat-export = "chat_export.cli:main"

[project.urls]
Repository = "https://github.com/JeromeMaag/ChatExportPDF"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["chat_export*"]
